# cmake

./: CMakeLists.txt  Directory stucture.txt  README.md
include/: client_utils.h  server_utils.h
lib/common/: CMakeLists.txt  common.cpp  common.h  utils.cpp  utils.h
src/client/: client.cpp  client_utils.cpp
src/server/: server.cpp  server_utils.cpp
